--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
   "description": "Exercice PHP: vers une architecture Symfony (préliminaire à l'étude de Symfony).",
   "require": {
     "symfony/var-dumper": "^4.4",
-    "twbs/bootstrap": "^4.5"
+    "twbs/bootstrap": "^4.5",
+    "ext-json": "*"
   }
 }
